installed node and started app.jsx file to render

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.1.0",
+    "node": "^9.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
