require row component in app.jsx

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server-dev": "nodemon server/index.js"
-
+    "server-dev": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,13 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/brianpak8/tic-tac-toe/issues"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.2.1"
   },
   "homepage": "https://github.com/brianpak8/tic-tac-toe#readme",
   "dependencies": {
