--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "tic tac toe",
   "main": "app.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server-dev": "nodemon server/index.js",
-    "react-dev": "webpack -d --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,21 +15,12 @@
   "bugs": {
     "url": "https://github.com/brianpak8/tic-tac-toe/issues"
   },
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
-  },
+
   "homepage": "https://github.com/brianpak8/tic-tac-toe#readme",
   "dependencies": {
     "chai": "^4.1.2",
-    "express": "^4.16.2",
     "mocha": "^4.1.0",
     "node": "^9.3.0",
-    "nodemon": "^1.14.9",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "prompt": "^1.0.0",
   }
 }
